# keepassxc-cli

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: lint_and_test.yml  pypi.yml
keepassxc_cli/: __main__.py  config.py  output.py
keepassxc_cli/commands/: add.py  clip.py  edit.py  generate.py  group_uuid.py  lock.py  ls.py  mkdir.py  rm.py  search.py  setup.py  show.py  status.py  totp.py  unlock.py  version.py
tests/: conftest.py  manual_test.md  test_commands.py  test_config.py  test_output.py
