[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "keepassxc-cli"
dynamic = ["version"]
description = "CLI for KeePassXC using the browser extension protocol with biometric unlock"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "keepassxc-browser-api==1.4.0",
    "pyperclip==1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
keepassxc-cli = "keepassxc_cli.__main__:main"

[tool.setuptools]
packages = ["keepassxc_cli", "keepassxc_cli.commands"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = ["**/__init__.py"]

[tool.ruff.lint]
ignore = ["E501"]
